# QuickNotes

./: .env.template  .gitignore  README.md  docker-compose.yaml  ecosystem.config.js  init.sql  nginx.config  nginx_cloudflare.config  pyproject.toml  setup_nginx.sh  start_dev.sh  test_init.sql
backend/: pyproject.toml
backend/src/: __init__.py  main.py
backend/src/components/authentication/: access_token.py  jwt.py  notebook_validate.py  password.py
backend/src/components/files/: pdf.py
backend/src/components/llm/: chatgpt.py  openai.py
backend/src/components/rag/: construct_prompt.py  message_context.py  pdf_parser.py  vector_store.py  vector_store_langchain.py
backend/src/core/: __init__.py  config.py  external_connections.py
backend/src/database/: __init__.py  authentication.py  db.py  models.py  notebooks.py  vectordb.py
backend/src/database/chats/: chat.py  messages.py
backend/src/database/dashboard/: notebooks.py
backend/src/database/notebook/: arxiv_documents.py  chats.py  documents.py  documents_chunks.py  notebook.py
backend/src/database/users/: create.py
backend/src/database/vector_store/: documents.py  pdf.py
backend/src/dev/: pdf_parser.py  test_api.py  tmp_vs.py
backend/src/routers/: README.md  __init__.py  chat.py  dashboard.py  notebook.py
backend/src/routers/authentication/: login.py  signing.py  user.py
backend/src/routers/chat/: __init__.py  documents.py  messages.py  pdf.py
backend/src/routers/chats/: chat.py  messages.py
backend/src/routers/dashboard/: dashboard.py
backend/src/routers/notebooks/: __init__.py  documents.py  notebook.py
backend/src/schema/: authentication.py  chat_messages.py  documents.py  notebook.py  user.py  vector_embeddings.py
backend/src/utils/: dependencies.py  exceptions.py
frontend/: .env.local  .env.production  .gitignore  middleware.ts  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: account.ts  chat.ts  dashboard.ts  dashboard.tsx  document.ts  document.tsx  login.ts  login.tsx  notebooks.ts  notebooks.tsx  pdf.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Navbar.tsx  ProtectedRoute.tsx  chat.tsx  newChatBox.tsx  notebookBlock.tsx  (+3 more)
frontend_old/: package-lock.json  package.json
frontend_old/src/: App.tsx  index.css
src/: pdf_parser.py
src/rag/: pdf_parser.py  vector_store.py
(+32 files in other folders)
