[project]
name = "quicknotes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argon2-cffi>=25.1.0",
    "dotenv-python>=0.0.1",
    "fastapi>=0.116.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-postgres>=0.0.15",
    "llama-parse>=0.6.51",
    "openai>=1.97.1",
    "psycopg>=3.2.9",
    "pydantic>=2.11.7",
    "pymupdf4llm>=0.0.27",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "sentence-transformers>=5.0.0",
    "tiktoken>=0.9.0",
]
